# online-judge

./: .env  CONTEST.md  Cargo.toml  Dockerfile  README.md  judge.template.db  judge.toml  rust-toolchain.toml
migrations/: 20231224091552_init.sql
src/: contest.rs  judge.rs  lib.rs  main.rs  web.rs
src/contest/: loader.rs
src/judge/: grade.rs  run.rs  sandbox.rs
src/judge/sandbox/: landlock.rs  resource.rs  seccomp.rs
src/web/: admin.rs  app.rs  auth.rs  database.rs  error.rs  session.rs
src/web/app/: admin.rs  contest.rs  leaderboard.rs  submit.rs
src/web/auth/: backend.rs  router.rs  user.rs
src/web/session/: leaderboard.rs
static/: style.css
templates/: base.html  index.html  navbar.html  not_found.html  sessions_sse.html
templates/admin/: admin.html  contest_table.html  session_control.html  session_table.html  user_table.html
templates/auth/: login.html  register.html
templates/contest/: contest.html  leaderboard.html  leaderboard_sse.html  leaderboard_table.html  submit.html  task.html
