[package]
name = "online-judge"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.2"
axum-login = "0.11.0"
axum_typed_multipart = "0.11.0"
color-eyre = { version = "0.6.2", default-features = false }
dotenvy = "0.15.7"
landlock = "0.3.0"
libc = "0.2.151"
once_cell = "1.19.0"
password-auth = "1.0.0"
pulldown-cmark = { version = "0.9.3", default-features = false, features = ["simd"] }
rayon = "1.8.0"
rlimit = "0.10.1"
seccompiler = "0.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_with = "3.4.0"
serde_yaml = "0.9.29"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite", "time"] }
tempfile = "3.8.1"
thiserror = "1.0.51"
time = { version = "0.3.31", features = ["serde-human-readable", "local-offset", "parsing"] }
tokio = { version = "1.35.1", features = ["macros", "net", "parking_lot", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
toml = "0.8.8"
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.0", features = ["fs", "trace", "compression-full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-tree = "0.3.0"
yansi = "0.5.1"

[profile.dev.package]
backtrace.opt-level = 3
sqlx-macros.opt-level = 3

[profile.release]
codegen-units = 1
lto = true
